--- a/index.html
+++ b/index.html
@@ -46,7 +46,25 @@
         </div>
     </header>
     <!-- section -->
-    
+    <section>
+        <div class="lapisan__section">
+            <!-- konten 1 -->
+            <main class="main1">
+                <h1>Kenapa harus pilih UJM?</h1>
+                <div class="card1"></div>
+                <div class="card2"></div>
+                <div class="card3"></div>
+            </main>
+            <!-- konten 2 -->
+            <main class="main2">
+
+            </main>
+            <!-- konten 3 -->
+            <main class="main3">
+
+            </main>
+        </div>
+    </section>
 
 
 
